# SOLUS

./: README.md
SOLUS Source Code/: keep_alive.py  main.py  package-lock.json  pyproject.toml  requirements.txt
SOLUS Source Code/.upm/: store.json
SOLUS Source Code/Backup_/: bot_backup
