[tool.poetry]
name = "a35t"
version = "0.1.0"
description = ""
authors = ["aestivial09@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
prsaw = "^0.2.0"
redditcli = "^2.1.0"
python-dotenv = "^0.17.1"
aiocron = "^1.4"
psutil = "^5.8.0"
google_images_download = "^2.8.0"
youtube_dl = "^2021.6.6"
sentry-sdk = "^1.5.5"
bs4 = "^0.0.1"
statsd = "^3.3.0"
frontmatter = "^3.0.7"
aioredis = "^2.0.1"
arrow = "^1.2.2"
feedparser = "^6.0.8"
more-itertools = "^8.12.0"
coloredlogs = "^15.0.1"
deepdiff = "^5.7.0"
emoji = "^1.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
